--- a/portfolio/others/index.html
+++ b/portfolio/others/index.html
@@ -82,73 +82,60 @@
 </head>
 <body>
 
-  <header>
-    <h1>UX Projects Hub</h1>
-    <p>Click "View Project" to explore each exercise</p>
-  </header>
+<header>
+  <h1>UX Projects Hub</h1>
+  <p>Click "View Project" to explore each exercise</p>
+</header>
 
-  <section id="ux-exercises">
+<section id="ux-exercises">
 
-    <!-- First Exercise -->
-    <div class="exercise-card">
-      <h3>1. UX Beginner Project – Online Grocery App</h3>
-      <p>Start your UX journey with this beginner project. Learn persona creation, user journeys, and basic case study write-up.</p>
-      <a href="ux-beginner.html" class="btn">View Project</a>
-    </div>
+  <!-- Exercise 1 -->
+  <div class="exercise-card">
+    <h3>1. UX Beginner Project – Online Grocery App</h3>
+    <p>Start your UX journey with this beginner project. Learn persona creation, user journeys, and basic case study write-up.</p>
+    <a href="ux-beginner.html" class="btn">View Project</a>
+  </div>
 
-    <!-- Second Exercise -->
-    <div class="exercise-card">
-      <h3>2. Data Dashboard Project</h3>
-      <p>Analyze and visualize data for decision-making. Build charts, metrics, and interactive dashboards for real-world scenarios.</p>
-      <a href="data-dashboard.html" class="btn">View Project</a>
-    </div>
-    
-    <!-- Third Exercise: Video & Image Showcase -->
-<div class="exercise-card">
-  <h3>3. Video & Image Showcase</h3>
-  <p>Watch selected videos and images from my projects</p>
-  <a href="Video-&-Image-Showcase.html" class="btn">View Project</a>
-</div>
-    <!-- UX Flow Studio Card -->
-<div class="exercise-card">
-  <h3>UX Flow Studio – Wireframes & Prototypes</h3>
-  <p>Explore wireframes, prototypes, and UI snippets demonstrating my UX workflow.</p>
-  <a href="UX-FlowStudio.html" class="btn">View Project</a>
-</div>
-    <!-- Future Exercises -->
-    <!--
-    <div class="exercise-card">
-      <h3>3. Next Exercise Name</h3>
-      <p>Description here...</p>
-      <a href="next-exercise.html" class="btn">View Project</a>
-    </div>
-    -->
+  <!-- Exercise 2 -->
+  <div class="exercise-card">
+    <h3>2. Data Dashboard Project</h3>
+    <p>Analyze and visualize data for decision-making. Build charts, metrics, and interactive dashboards for real-world scenarios.</p>
+    <a href="data-dashboard.html" class="btn">View Project</a>
+  </div>
 
-    <!-- Usability Optimization Case Study Card -->
-<div class="exercise-card">
-  <h3>Usability Optimization — Case Study</h3>
-  <p>Before & after UX improvements: problem diagnosis, solution design and measurable outcomes.</p>
-  <a href="usability-case.html" class="btn">View Project</a>
-</div>
+  <!-- Exercise 3 -->
+  <div class="exercise-card">
+    <h3>3. Video & Image Showcase</h3>
+    <p>Watch selected videos and images from my projects</p>
+    <a href="video-image-showcase.html" class="btn">View Project</a>
+  </div>
 
-    <!-- UX Flow Studio Card -->
-<div class="exercise-card">
-  <h3>UX Flow Studio – Wireframes & Prototypes</h3>
-  <p>Explore wireframes, prototypes, and UI snippets demonstrating my UX workflow.</p>
-  <a href="ux-flowstudio.html" class="btn">View Project</a>
-</div>
-  
-<div class="exercise-card">
-  <h3>5. Advanced UX Flow – Interactive Prototype</h3>
-  <p>Detailed UX workflow: user research, wireframes, interactive prototype, and testing insights.</p>
-  <a href="ux-advanced.html" class="btn">View Project</a>
-</div>
-    
-  </section>
+  <!-- Exercise 4 -->
+  <div class="exercise-card">
+    <h3>4. UX Flow Studio – Wireframes & Prototypes</h3>
+    <p>Explore wireframes, prototypes, and UI snippets demonstrating my UX workflow and user-centered design process.</p>
+    <a href="ux-flowstudio.html" class="btn">View Project</a>
+  </div>
 
-  <footer>
-    © 2025 Ismail Abdullahi Idris
-  </footer>
+  <!-- Exercise 5 -->
+  <div class="exercise-card">
+    <h3>5. Usability Optimization — Case Study</h3>
+    <p>Before & after UX improvements: problem diagnosis, solution design and measurable outcomes.</p>
+    <a href="usability-case.html" class="btn">View Project</a>
+  </div>
+
+  <!-- Exercise 6 -->
+  <div class="exercise-card">
+    <h3>6. Advanced UX Flow – Interactive Prototype</h3>
+    <p>Detailed UX workflow: user research, wireframes, interactive prototype, and testing insights.</p>
+    <a href="ux-advanced.html" class="btn">View Project</a>
+  </div>
+
+</section>
+
+<footer>
+  © 2025 Ismail Abdullahi Idris
+</footer>
 
 </body>
 </html>
