--- a/portfolio/others/index.html
+++ b/portfolio/others/index.html
@@ -17,15 +17,9 @@
       background: #1e3c72;
       color: #fff;
     }
-    header h1 {
-      margin: 0;
-      font-size: 2.5em;
-    }
-    header p {
-      margin: 8px 0 0 0;
-      font-size: 1.1em;
-      color: #cce0ff;
-    }
+    header h1 { margin: 0; font-size: 2.5em; }
+    header p { margin: 8px 0 0 0; font-size: 1.1em; color: #cce0ff; }
+
     section#ux-exercises {
       max-width: 1000px;
       margin: 30px auto;
@@ -34,6 +28,7 @@
       gap: 30px;
       padding: 0 20px;
     }
+
     .exercise-card {
       background: #fff;
       padding: 25px;
@@ -45,15 +40,8 @@
       transform: translateY(-5px);
       box-shadow: 0 8px 25px rgba(0,0,0,0.2);
     }
-    .exercise-card h3 {
-      margin-top: 0;
-      color: #1e3c72;
-    }
-    .exercise-card p {
-      margin: 10px 0 15px 0;
-      font-size: 1em;
-      color: #555;
-    }
+    .exercise-card h3 { margin-top: 0; color: #1e3c72; }
+    .exercise-card p { margin: 10px 0 15px 0; font-size: 1em; color: #555; }
     .exercise-card a.btn {
       display: inline-block;
       padding: 10px 20px;
@@ -62,10 +50,10 @@
       text-decoration: none;
       border-radius: 6px;
       transition: background 0.3s;
+      cursor: pointer;
     }
-    .exercise-card a.btn:hover {
-      background: #2a5298;
-    }
+    .exercise-card a.btn:hover { background: #2a5298; }
+
     footer {
       text-align: center;
       padding: 20px;
@@ -74,6 +62,38 @@
       background: #eee;
       margin-top: 50px;
     }
+
+    /* Modal Styles */
+    .modal {
+      display: none;
+      position: fixed;
+      top:0; left:0;
+      width:100%; height:100%;
+      background: rgba(0,0,0,0.7);
+      justify-content: center;
+      align-items: center;
+      z-index: 1000;
+    }
+    .modal-content {
+      background: #fff;
+      padding: 30px;
+      border-radius: 12px;
+      text-align: center;
+      max-width: 400px;
+      color: #333;
+    }
+    .modal-content h2 { margin-top: 0; color: #1e3c72; }
+    .close-modal {
+      margin-top: 20px;
+      padding: 10px 20px;
+      background: #1e3c72;
+      color: #fff;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+    }
+    .close-modal:hover { background: #2a5298; }
+
     @media(max-width:600px){
       header h1 { font-size: 2em; }
       .exercise-card { padding: 20px; }
@@ -82,60 +102,70 @@
 </head>
 <body>
 
-<header>
-  <h1>UX Projects Hub</h1>
-  <p>Click "View Project" to explore each exercise</p>
-</header>
+  <header>
+    <h1>UX Projects Hub</h1>
+    <p>Click "View Project" to explore each exercise</p>
+  </header>
 
-<section id="ux-exercises">
+  <section id="ux-exercises">
 
-  <!-- Exercise 1 -->
-  <div class="exercise-card">
-    <h3>1. UX Beginner Project – Online Grocery App</h3>
-    <p>Start your UX journey with this beginner project. Learn persona creation, user journeys, and basic case study write-up.</p>
-    <a href="ux-beginner.html" class="btn">View Project</a>
+    <!-- Example Existing Exercise -->
+    <div class="exercise-card">
+      <h3>1. UX Beginner Project – Online Grocery App</h3>
+      <p>Learn persona creation, user journeys, and basic case study write-up.</p>
+      <a data-file="others/ux-beginner.html" class="btn">View Project</a>
+    </div>
+
+    <!-- Template for New Exercise -->
+    <!--
+    <div class="exercise-card">
+      <h3>Exercise Name Here</h3>
+      <p>Short description of the exercise and what client will see.</p>
+      <a data-file="others/new-exercise.html" class="btn">View Project</a>
+    </div>
+    -->
+
+  </section>
+
+  <!-- Modal -->
+  <div class="modal" id="modal">
+    <div class="modal-content">
+      <h2>Coming Soon</h2>
+      <p>This project is not yet available. Stay tuned!</p>
+      <button class="close-modal" onclick="closeModal()">Close</button>
+    </div>
   </div>
 
-  <!-- Exercise 2 -->
-  <div class="exercise-card">
-    <h3>2. Data Dashboard Project</h3>
-    <p>Analyze and visualize data for decision-making. Build charts, metrics, and interactive dashboards for real-world scenarios.</p>
-    <a href="data-dashboard.html" class="btn">View Project</a>
-  </div>
+  <footer>
+    © 2025 Ismail Abdullahi Idris
+  </footer>
 
-  <!-- Exercise 3 -->
-  <div class="exercise-card">
-    <h3>3. Video & Image Showcase</h3>
-    <p>Watch selected videos and images from my projects</p>
-    <a href="video-image-showcase.html" class="btn">View Project</a>
-  </div>
+  <script>
+    const buttons = document.querySelectorAll('.exercise-card a.btn');
+    const modal = document.getElementById('modal');
 
-  <!-- Exercise 4 -->
-  <div class="exercise-card">
-    <h3>4. UX Flow Studio – Wireframes & Prototypes</h3>
-    <p>Explore wireframes, prototypes, and UI snippets demonstrating my UX workflow and user-centered design process.</p>
-    <a href="ux-flowstudio.html" class="btn">View Project</a>
-  </div>
+    buttons.forEach(btn => {
+      btn.addEventListener('click', () => {
+        const file = btn.getAttribute('data-file');
 
-  <!-- Exercise 5 -->
-  <div class="exercise-card">
-    <h3>5. Usability Optimization — Case Study</h3>
-    <p>Before & after UX improvements: problem diagnosis, solution design and measurable outcomes.</p>
-    <a href="usability-case.html" class="btn">View Project</a>
-  </div>
+        fetch(file, { method: 'HEAD' })
+          .then(res => {
+            if (res.ok) {
+              window.location.href = file; // file exists
+            } else {
+              modal.style.display = 'flex'; // file missing
+            }
+          })
+          .catch(err => {
+            modal.style.display = 'flex';
+          });
+      });
+    });
 
-  <!-- Exercise 6 -->
-  <div class="exercise-card">
-    <h3>6. Advanced UX Flow – Interactive Prototype</h3>
-    <p>Detailed UX workflow: user research, wireframes, interactive prototype, and testing insights.</p>
-    <a href="ux-advanced.html" class="btn">View Project</a>
-  </div>
-
-</section>
-
-<footer>
-  © 2025 Ismail Abdullahi Idris
-</footer>
+    function closeModal() {
+      modal.style.display = 'none';
+    }
+  </script>
 
 </body>
 </html>
