--- a/portfolio/others/index.html
+++ b/portfolio/others/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>UX Projects - Ismail Abdullahi Idris</title>
+  <title>UX Projects Hub - Ismail Abdullahi Idris</title>
   <style>
     body {
       margin: 0;
@@ -82,65 +82,60 @@
 </head>
 <body>
 
-<header>
-  <h1>UX Projects Hub</h1>
-  <p>Click "View Project" to explore each exercise</p>
-</header>
+  <header>
+    <h1>UX Projects Hub</h1>
+    <p>Click "View Project" to explore each exercise</p>
+  </header>
 
-<section id="ux-exercises">
+  <section id="ux-exercises">
 
-  <!-- Template for a card -->
-  <!-- Copy this block and change content for unlimited exercises -->
-  <div class="exercise-card">
-    <h3>1. UX Beginner Project – Online Grocery App</h3>
-    <p>Start your UX journey with this beginner project. Learn persona creation, user journeys, and basic case study write-up.</p>
-    <a href="ux-beginner.html" class="btn">View Project</a>
-  </div>
+    <!-- UX Beginner -->
+    <div class="exercise-card">
+      <h3>1. UX Beginner Project – Online Grocery App</h3>
+      <p>Start your UX journey with this beginner project. Learn persona creation, user journeys, and basic case study write-up.</p>
+      <a href="others/ux-beginner.html" class="btn">View Project</a>
+    </div>
 
-  <div class="exercise-card">
-    <h3>2. Data Dashboard Project</h3>
-    <p>Analyze and visualize data for decision-making. Build charts, metrics, and interactive dashboards for real-world scenarios.</p>
-    <a href="data-dashboard.html" class="btn">View Project</a>
-  </div>
+    <!-- Data Dashboard -->
+    <div class="exercise-card">
+      <h3>2. Data Dashboard Project</h3>
+      <p>Analyze and visualize data for decision-making. Build charts, metrics, and interactive dashboards for real-world scenarios.</p>
+      <a href="others/data-dashboard.html" class="btn">View Project</a>
+    </div>
 
-  <div class="exercise-card">
-    <h3>3. Video & Image Showcase</h3>
-    <p>Watch selected videos and images from my projects.</p>
-    <a href="video-image-showcase.html" class="btn">View Project</a>
-  </div>
+    <!-- Video & Image Showcase -->
+    <div class="exercise-card">
+      <h3>3. Video & Image Showcase</h3>
+      <p>Watch selected videos and images from my projects.</p>
+      <a href="others/Video-&-Image-Showcase.html" class="btn">View Project</a>
+    </div>
 
-  <div class="exercise-card">
-    <h3>4. UX Flow Studio – Wireframes & Prototypes</h3>
-    <p>Explore wireframes, prototypes, and UI snippets demonstrating my UX workflow.</p>
-    <a href="ux-flowstudio.html" class="btn">View Project</a>
-  </div>
+    <!-- UX Flow Studio -->
+    <div class="exercise-card">
+      <h3>4. UX Flow Studio – Wireframes & Prototypes</h3>
+      <p>Explore wireframes, prototypes, and UI snippets demonstrating my UX workflow.</p>
+      <a href="others/UX-FlowStudio.html" class="btn">View Project</a>
+    </div>
 
-  <div class="exercise-card">
-    <h3>5. Usability Optimization — Case Study</h3>
-    <p>Before & after UX improvements: problem diagnosis, solution design, and measurable outcomes.</p>
-    <a href="usability-case.html" class="btn">View Project</a>
-  </div>
+    <!-- Usability Optimization -->
+    <div class="exercise-card">
+      <h3>5. Usability Optimization — Case Study</h3>
+      <p>Before & after UX improvements: problem diagnosis, solution design and measurable outcomes.</p>
+      <a href="others/usability-case.html" class="btn">View Project</a>
+    </div>
 
-  <div class="exercise-card">
-    <h3>6. Advanced UX Flow – Interactive Prototype</h3>
-    <p>Detailed UX workflow: user research, wireframes, interactive prototype, and testing insights.</p>
-    <a href="ux-advanced.html" class="btn">View Project</a>
-  </div>
+    <!-- Advanced UX Flow -->
+    <div class="exercise-card">
+      <h3>6. Advanced UX Flow – Interactive Prototype</h3>
+      <p>Detailed UX workflow: user research, wireframes, interactive prototype, and testing insights.</p>
+      <a href="others/ux-advanced.html" class="btn">View Project</a>
+    </div>
 
-  <!-- Example for future exercises -->
-  <!--
-  <div class="exercise-card">
-    <h3>7. Next Exercise Name</h3>
-    <p>Description here...</p>
-    <a href="next-exercise.html" class="btn">Coming Soon</a>
-  </div>
-  -->
+  </section>
 
-</section>
-
-<footer>
-  © 2025 Ismail Abdullahi Idris
-</footer>
+  <footer>
+    © 2025 Ismail Abdullahi Idris
+  </footer>
 
 </body>
 </html>
