--- a/portfolio/others/index.html
+++ b/portfolio/others/index.html
@@ -117,6 +117,13 @@
       <a href="others/UX-FlowStudio.html" class="btn">View Project</a>
     </div>
 
+    <!-- Sixth Project Card (consistent style) -->
+<div class="exercise-card">
+  <h3>Digital Experience Design – SaaS Platform</h3>
+  <p>Discover the user-centered design process for a SaaS platform, from wireframes to interactive prototypes and usability insights.</p>
+  <a href="others/digital-experience.html" class="btn">View Project</a>
+</div>
+    
     <!-- Usability Optimization -->
     <div class="exercise-card">
       <h3>5. Usability Optimization — Case Study</h3>
