--- a/portfolio/others/index.html
+++ b/portfolio/others/index.html
@@ -89,51 +89,51 @@
 
   <section id="ux-exercises">
 
-    <!-- 1. UX Beginner Project -->
+    <!-- 1 -->
     <div class="exercise-card">
-      <h3>1. UX Beginner Project – Online Grocery App</h3>
+      <h3>UX Beginner Project – Online Grocery App</h3>
       <p>Start your UX journey with this beginner project. Learn persona creation, user journeys, and basic case study write-up.</p>
       <a href="others/ux-beginner.html" class="btn">View Project</a>
     </div>
 
-    <!-- 2. Data Dashboard Project -->
+    <!-- 2 -->
     <div class="exercise-card">
-      <h3>2. Data Dashboard Project</h3>
+      <h3>Data Dashboard Project</h3>
       <p>Analyze and visualize data for decision-making. Build charts, metrics, and interactive dashboards for real-world scenarios.</p>
       <a href="others/data-dashboard.html" class="btn">View Project</a>
     </div>
 
-    <!-- 3. Video & Image Showcase -->
+    <!-- 3 -->
     <div class="exercise-card">
-      <h3>3. Video & Image Showcase</h3>
+      <h3>Video & Image Showcase</h3>
       <p>Watch selected videos and images from my projects.</p>
-      <a href="others/Video-%26-Image-Showcase.html" class="btn">View Project</a>
+      <a href="others/Video-&-Image-Showcase.html" class="btn">View Project</a>
     </div>
 
-    <!-- 4. UX Flow Studio – Wireframes & Prototypes -->
+    <!-- 4 -->
     <div class="exercise-card">
-      <h3>4. UX Flow Studio – Wireframes & Prototypes</h3>
+      <h3>UX Flow Studio – Wireframes & Prototypes</h3>
       <p>Explore wireframes, prototypes, and UI snippets demonstrating my UX workflow.</p>
       <a href="others/UX-FlowStudio.html" class="btn">View Project</a>
     </div>
 
-    <!-- 5. Usability Optimization — Case Study -->
+    <!-- 5 -->
     <div class="exercise-card">
-      <h3>5. Usability Optimization — Case Study</h3>
+      <h3>Usability Optimization — Case Study</h3>
       <p>Before & after UX improvements: problem diagnosis, solution design and measurable outcomes.</p>
       <a href="others/usability-case.html" class="btn">View Project</a>
     </div>
 
-    <!-- 6. Advanced UX Flow – Interactive Prototype -->
+    <!-- 6 -->
     <div class="exercise-card">
-      <h3>6. Advanced UX Flow – Interactive Prototype</h3>
+      <h3>Advanced UX Flow – Interactive Prototype</h3>
       <p>Detailed UX workflow: user research, wireframes, interactive prototype, and testing insights.</p>
       <a href="others/ux-advanced.html" class="btn">View Project</a>
     </div>
 
-    <!-- 7. Digital Experience Design – SaaS Platform -->
+    <!-- 7 -->
     <div class="exercise-card">
-      <h3>7. Digital Experience Design – SaaS Platform</h3>
+      <h3>Digital Experience Design – SaaS Platform</h3>
       <p>Discover the user-centered design process for a SaaS platform, from wireframes to interactive prototypes and usability insights.</p>
       <a href="others/digital-experience.html" class="btn">View Project</a>
     </div>
