--- a/portfolio/others/index.html
+++ b/portfolio/others/index.html
@@ -17,15 +17,9 @@
       background: #1e3c72;
       color: #fff;
     }
-    header h1 {
-      margin: 0;
-      font-size: 2.5em;
-    }
-    header p {
-      margin: 8px 0 0 0;
-      font-size: 1.1em;
-      color: #cce0ff;
-    }
+    header h1 { margin: 0; font-size: 2.5em; }
+    header p { margin: 8px 0 0 0; font-size: 1.1em; color: #cce0ff; }
+
     section#ux-exercises {
       max-width: 1000px;
       margin: 30px auto;
@@ -34,6 +28,7 @@
       gap: 30px;
       padding: 0 20px;
     }
+
     .exercise-card {
       background: #fff;
       padding: 25px;
@@ -45,15 +40,8 @@
       transform: translateY(-5px);
       box-shadow: 0 8px 25px rgba(0,0,0,0.2);
     }
-    .exercise-card h3 {
-      margin-top: 0;
-      color: #1e3c72;
-    }
-    .exercise-card p {
-      margin: 10px 0 15px 0;
-      font-size: 1em;
-      color: #555;
-    }
+    .exercise-card h3 { margin-top: 0; color: #1e3c72; }
+    .exercise-card p { margin: 10px 0 15px 0; font-size: 1em; color: #555; }
     .exercise-card a.btn {
       display: inline-block;
       padding: 10px 20px;
@@ -63,9 +51,8 @@
       border-radius: 6px;
       transition: background 0.3s;
     }
-    .exercise-card a.btn:hover {
-      background: #2a5298;
-    }
+    .exercise-card a.btn:hover { background: #2a5298; }
+
     footer {
       text-align: center;
       padding: 20px;
@@ -74,6 +61,7 @@
       background: #eee;
       margin-top: 50px;
     }
+
     @media(max-width:600px){
       header h1 { font-size: 2em; }
       .exercise-card { padding: 20px; }
@@ -84,56 +72,56 @@
 
   <header>
     <h1>UX Projects Hub</h1>
-    <p>Click "View Project" to explore each exercise</p>
+    <p>Click "View Project" to explore each project</p>
   </header>
 
   <section id="ux-exercises">
 
-    <!-- 1 -->
+    <!-- Card 1 -->
     <div class="exercise-card">
-      <h3>UX Beginner Project – Online Grocery App</h3>
+      <h3>1. UX Beginner Project – Online Grocery App</h3>
       <p>Start your UX journey with this beginner project. Learn persona creation, user journeys, and basic case study write-up.</p>
       <a href="others/ux-beginner.html" class="btn">View Project</a>
     </div>
 
-    <!-- 2 -->
+    <!-- Card 2 -->
     <div class="exercise-card">
-      <h3>Data Dashboard Project</h3>
+      <h3>2. Data Dashboard Project</h3>
       <p>Analyze and visualize data for decision-making. Build charts, metrics, and interactive dashboards for real-world scenarios.</p>
       <a href="others/data-dashboard.html" class="btn">View Project</a>
     </div>
 
-    <!-- 3 -->
+    <!-- Card 3 -->
     <div class="exercise-card">
-      <h3>Video & Image Showcase</h3>
+      <h3>3. Video & Image Showcase</h3>
       <p>Watch selected videos and images from my projects.</p>
       <a href="others/Video-&-Image-Showcase.html" class="btn">View Project</a>
     </div>
 
-    <!-- 4 -->
+    <!-- Card 4 -->
     <div class="exercise-card">
-      <h3>UX Flow Studio – Wireframes & Prototypes</h3>
+      <h3>4. UX Flow Studio – Wireframes & Prototypes</h3>
       <p>Explore wireframes, prototypes, and UI snippets demonstrating my UX workflow.</p>
       <a href="others/UX-FlowStudio.html" class="btn">View Project</a>
     </div>
 
-    <!-- 5 -->
+    <!-- Card 5 -->
     <div class="exercise-card">
-      <h3>Usability Optimization — Case Study</h3>
+      <h3>5. Usability Optimization — Case Study</h3>
       <p>Before & after UX improvements: problem diagnosis, solution design and measurable outcomes.</p>
       <a href="others/usability-case.html" class="btn">View Project</a>
     </div>
 
-    <!-- 6 -->
+    <!-- Card 6 -->
     <div class="exercise-card">
-      <h3>Advanced UX Flow – Interactive Prototype</h3>
+      <h3>6. Advanced UX Flow – Interactive Prototype</h3>
       <p>Detailed UX workflow: user research, wireframes, interactive prototype, and testing insights.</p>
       <a href="others/ux-advanced.html" class="btn">View Project</a>
     </div>
 
-    <!-- 7 -->
+    <!-- Card 7 -->
     <div class="exercise-card">
-      <h3>Digital Experience Design – SaaS Platform</h3>
+      <h3>7. Digital Experience Design – SaaS Platform</h3>
       <p>Discover the user-centered design process for a SaaS platform, from wireframes to interactive prototypes and usability insights.</p>
       <a href="others/digital-experience.html" class="btn">View Project</a>
     </div>
