--- a/portfolio/others/index.html
+++ b/portfolio/others/index.html
@@ -137,9 +137,10 @@
       <p>Discover the user-centered design process for a SaaS platform, from wireframes to interactive prototypes and usability insights.</p>
       <a href="digital-experience.html" class="btn">View Project</a>
     </div>
-    <!-- New UX Project Card -->
+    
+    <!-- 8. Customer Insights Dashboard – UX Analysis -->
 <div class="exercise-card">
-  <h3>Customer Insights Dashboard – UX Analysis</h3>
+  <h3>8. Customer Insights Dashboard – UX Analysis</h3>
   <p>Design and analyze user interactions through dashboards, persona insights, and actionable UX recommendations.</p>
   <a href="others/customer-insights.html" class="btn">View Project</a>
 </div>
