--- a/portfolio/others/index.html
+++ b/portfolio/others/index.html
@@ -141,7 +141,7 @@
     <!-- 8. Customer Insights Dashboard – UX Analysis -->
 <div class="exercise-card">
   <h3>8. Customer Insights Dashboard – UX Analysis</h3>
-  <p>Design and analyze user interactions through dashboards, persona insights, and actionable UX recommendations.</p>
+  <p>Analyze user interactions and behavior with dashboards, persona insights, and actionable UX recommendations to improve digital experiences.</p>
   <a href="others/customer-insights.html" class="btn">View Project</a>
 </div>
 
