--- a/portfolio/others/index.html
+++ b/portfolio/others/index.html
@@ -142,7 +142,7 @@
 <div class="exercise-card">
   <h3>8. Customer Insights Dashboard – UX Analysis</h3>
   <p>Analyze user interactions and behavior with dashboards, persona insights, and actionable UX recommendations to improve digital experiences.</p>
-  <a href="others/customer-insights.html" class="btn">View Project</a>
+  <a href="customer-insights.html" class="btn">View Project</a>
 </div>
 
   </section>
