--- a/portfolio/others/index.html
+++ b/portfolio/others/index.html
@@ -145,6 +145,13 @@
   <a href="customer-insights.html" class="btn">View Project</a>
 </div>
 
+    <!-- 9. Mobile App Usability Testing Report -->
+<div class="exercise-card">
+  <h3>9. Mobile App Usability Testing Report</h3>
+  <p>Conduct usability testing for a mobile app, identify user pain points, and present improvement recommendations in a structured UX report.</p>
+  <a href="mobile-usability.html" class="btn">View Project</a>
+</div>
+    
   </section>
 
   <footer>
