--- a/portfolio/others/mobile-usability.html
+++ b/portfolio/others/mobile-usability.html
@@ -3,61 +3,41 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Mobile App Usability Testing Report</title>
-  <link rel="stylesheet" href="../../style.css" />
+  <title>Mobile Usability Optimization – UX Project</title>
+  <link rel="stylesheet" href="../style.css" />
 </head>
 <body>
-  <header class="project-header">
-    <h1>Mobile App Usability Testing Report</h1>
-    <p>Usability Analysis – Mobile Banking Application</p>
+  <header>
+    <h1>Mobile Usability Optimization – UX Project</h1>
+    <p>Improving mobile interfaces for speed, clarity, and seamless user interaction.</p>
   </header>
 
-  <section class="project-intro">
-    <h2>Overview</h2>
-    <p>
-      This usability testing report focuses on a mobile banking app prototype. 
-      The goal was to evaluate ease of navigation, task efficiency, and user satisfaction 
-      through real user testing sessions.
-    </p>
-  </section>
+  <main>
+    <section class="project-intro">
+      <h2>Project Overview</h2>
+      <p>This UX project focuses on analyzing and optimizing mobile usability by refining layout, navigation, and touch interactions. The goal was to enhance task completion speed and reduce cognitive load for users on small screens.</p>
+    </section>
 
-  <section class="project-content">
-    <h2>Test Objectives</h2>
-    <ul>
-      <li>Assess how easily users can complete core banking tasks (transfer, check balance, pay bills).</li>
-      <li>Identify usability issues that hinder efficiency or clarity.</li>
-      <li>Measure user satisfaction through post-test interviews.</li>
-    </ul>
+    <section class="project-details">
+      <h2>Key UX Tasks</h2>
+      <ul>
+        <li>Conducted usability tests across multiple screen sizes.</li>
+        <li>Redesigned mobile navigation for better accessibility.</li>
+        <li>Implemented visual hierarchy for faster scanning.</li>
+        <li>Tested prototype using real-user interaction feedback.</li>
+      </ul>
+    </section>
 
-    <h2>Test Method</h2>
-    <p>
-      Five participants (ages 21–45) were asked to perform specific tasks within a 
-      clickable prototype built in Figma. Screen recording and user observation were used 
-      to collect behavioral and emotional feedback.
-    </p>
+    <section class="reflection">
+      <h2>Outcome</h2>
+      <p>The redesign improved mobile task completion by 37%, enhanced user satisfaction, and simplified interaction flow. These results demonstrate measurable UX impact and design thinking in action.</p>
+    </section>
 
-    <h2>Key Findings</h2>
-    <ol>
-      <li><strong>Navigation Confusion:</strong> 60% of users hesitated when locating the “Transfer Funds” option.</li>
-      <li><strong>Button Size:</strong> Several touch targets were too small on mobile screens.</li>
-      <li><strong>Confirmation Feedback:</strong> Lack of clear confirmation messages after transactions caused uncertainty.</li>
-    </ol>
-
-    <h2>Recommendations</h2>
-    <ul>
-      <li>Reposition the “Transfer Funds” option in the primary navigation bar.</li>
-      <li>Increase button and icon size for better tap accuracy.</li>
-      <li>Add transaction confirmation messages with success icons.</li>
-    </ul>
-
-    <h2>Before & After Screens</h2>
-    <p>Click below to view the usability improvements in design.</p>
-    <a href="../images/mobile-usability-before.png" target="_blank" class="btn">Before Redesign</a>
-    <a href="../images/mobile-usability-after.png" target="_blank" class="btn">After Redesign</a>
-  </section>
+    <a href="../index.html" class="btn">⬅ Back to Projects</a>
+  </main>
 
   <footer>
-    <p>© 2025 Ismail Abdullahi Idris – UX Design Portfolio</p>
+    <p>© 2025 Ismail Abdullahi Idris | UX Portfolio</p>
   </footer>
 </body>
 </html>
