--- a/portfolio/others/mobile-usability.html
+++ b/portfolio/others/mobile-usability.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Mobile Usability Optimization – UX Project</title>
-  <link rel="stylesheet" href="../style.css" />
+  <link rel="stylesheet" href="others/style.css" />
 </head>
 <body>
   <header>
@@ -33,11 +33,11 @@
       <p>The redesign improved mobile task completion by 37%, enhanced user satisfaction, and simplified interaction flow. These results demonstrate measurable UX impact and design thinking in action.</p>
     </section>
 
-    <a href="../index.html" class="btn">⬅ Back to Projects</a>
+    <a href="index.html" class="btn">⬅ Back to Projects</a>
   </main>
 
   <footer>
-    <p>© 2025 Ismail Abdullahi Idris | UX Portfolio</p>
+    <p>© 2025 Ismail Abdullahi Idris</p>
   </footer>
 </body>
 </html>
