--- a/portfolio/others/mobile-usability.html
+++ b/portfolio/others/mobile-usability.html
@@ -1,43 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Mobile Usability Optimization – UX Project</title>
-  <link rel="stylesheet" href="others/style.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Mobile Usability — Responsive UX Study</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: #f4f4f4;
+      color: #333;
+    }
+    header {
+      text-align: center;
+      padding: 40px 20px;
+      background: #1e3c72;
+      color: #fff;
+    }
+    header h1 {
+      margin: 0;
+      font-size: 2em;
+    }
+    header p {
+      margin-top: 10px;
+      color: #cce0ff;
+    }
+    section {
+      max-width: 900px;
+      margin: 40px auto;
+      background: #fff;
+      padding: 30px;
+      border-radius: 12px;
+      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+    }
+    h2 {
+      color: #1e3c72;
+      margin-bottom: 15px;
+    }
+    p {
+      line-height: 1.6;
+      color: #555;
+    }
+    ul {
+      margin: 15px 0;
+      padding-left: 20px;
+      color: #444;
+    }
+    footer {
+      text-align: center;
+      padding: 20px;
+      background: #eee;
+      color: #555;
+      margin-top: 40px;
+    }
+  </style>
 </head>
 <body>
+
   <header>
-    <h1>Mobile Usability Optimization – UX Project</h1>
-    <p>Improving mobile interfaces for speed, clarity, and seamless user interaction.</p>
+    <h1>Mobile Usability — Responsive UX Study</h1>
+    <p>Optimizing user experience for mobile responsiveness and interaction flow</p>
   </header>
 
-  <main>
-    <section class="project-intro">
-      <h2>Project Overview</h2>
-      <p>This UX project focuses on analyzing and optimizing mobile usability by refining layout, navigation, and touch interactions. The goal was to enhance task completion speed and reduce cognitive load for users on small screens.</p>
-    </section>
+  <section>
+    <h2>Overview</h2>
+    <p>
+      This project focuses on analyzing and improving mobile usability across different screen sizes. 
+      The goal was to create an adaptive layout that provides seamless interaction for users on smartphones and tablets.
+    </p>
 
-    <section class="project-details">
-      <h2>Key UX Tasks</h2>
-      <ul>
-        <li>Conducted usability tests across multiple screen sizes.</li>
-        <li>Redesigned mobile navigation for better accessibility.</li>
-        <li>Implemented visual hierarchy for faster scanning.</li>
-        <li>Tested prototype using real-user interaction feedback.</li>
-      </ul>
-    </section>
+    <h2>Objectives</h2>
+    <ul>
+      <li>Test mobile responsiveness of interactive components</li>
+      <li>Evaluate touch-friendly design elements</li>
+      <li>Enhance accessibility and visual hierarchy</li>
+      <li>Ensure consistent navigation experience</li>
+    </ul>
 
-    <section class="reflection">
-      <h2>Outcome</h2>
-      <p>The redesign improved mobile task completion by 37%, enhanced user satisfaction, and simplified interaction flow. These results demonstrate measurable UX impact and design thinking in action.</p>
-    </section>
+    <h2>Outcome</h2>
+    <p>
+      The final result demonstrated significant improvements in engagement and task completion rates. 
+      The project highlights best practices for responsive UX design and usability optimization.
+    </p>
 
-    <a href="index.html" class="btn">⬅ Back to Projects</a>
-  </main>
+    <h2>View Prototype</h2>
+    <p><a href="#" style="color:#1e3c72; text-decoration:underline;">View Interactive Prototype</a></p>
+  </section>
 
   <footer>
-    <p>© 2025 Ismail Abdullahi Idris</p>
+    © 2025 Ismail Abdullahi Idris
   </footer>
+
 </body>
 </html>
