--- a/portfolio/others/index.html
+++ b/portfolio/others/index.html
@@ -154,6 +154,14 @@
     
   </section>
 
+  <!-- 10. Product Landing Page – UX Conversion Design -->
+<div class="exercise-card">
+  <h3>10. Product Landing Page – UX Conversion Design</h3>
+  <p>Designing persuasive and visually balanced landing pages focused on user engagement and conversion optimization.</p>
+  <a href="others/product-landing.html" class="btn">View Project</a>
+</div>
+  
+
   <footer>
     © 2025 Ismail Abdullahi Idris
   </footer>
