--- a/portfolio/others/index.html
+++ b/portfolio/others/index.html
@@ -159,6 +159,12 @@
   <a href="product-landing.html" class="btn">View Project</a>
 </div>
 
+    <!-- 11. Interactive Dashboard – User Analytics -->
+<div class="exercise-card">
+  <h3>11. Interactive Dashboard – User Analytics</h3>
+  <p>Visualize and analyze user behavior through interactive charts, metrics, and actionable insights for better UX decisions.</p>
+  <a href="others/interactive-dashboard.html" class="btn">View Project</a>
+</div>
 
   </section>
   
